Att mudança de senha v1

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 projectId: "dados-do-farm",
                 appId: "1:562865269160:web:5398b6d0da1bfb0151159d"
             },
-            senhaAdmin: "valley123", 
+            senhaAdmin: "admin007", 
             webhookUrl: "https://discord.com/api/webhooks/1442736005110038608/SI9XTxc6nL-Z7Yj177QGvWw8Q80xsptxoq70HhdPhTFEZJjJGcvzOcTXzCH41RixLAYd" 
         };
 
@@ -482,3 +482,4 @@
     </script>
 </body>
 </html>
+
